# shikigotchi

./: .gitattributes  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  release.stork  setup.py
.github/: CODEOWNERS  FUNDING.yml
.github/workflows/: ci.yml  publish.yml
builder/: combined.pkr.hcl  shikigotchi32-custom.pkr.hcl  shikigotchi32-custom.yml  shikigotchi32.pkr.hcl  shikigotchi32.yml  shikigotchi64.pkr.hcl  shikigotchi64.yml
builder/extras/: nexmon.yml
scripts/: backup.sh  language.sh  preview.py  pypi_upload.sh  win_connection_share.ps1
shikigotchi/: __init__.py  agent.py  automata.py  bettercap.py  defaults.toml  grid.py  identity.py  log.py  utils.py  voice.py
shikigotchi/ai/: __init__.py  epoch.py  featurizer.py  gym.py  reward.py  train.py
shikigotchi/fs/: __init__.py
shikigotchi/google/: cmd.py
shikigotchi/mesh/: peer.py  utils.py
shikigotchi/plugins/: __init__.py  cmd.py
shikigotchi/plugins/default/: auto-update.py  bt-tether.py  example.py  fix_services.py  gdrivesync.py  gpio_buttons.py  gps.py  grid.py  logtail.py  memtemp.py  net-pos.py  onlinehashcrack.py  session-stats.py  switcher.py  ups_lite.py  webcfg.py  webgpsmap.html  webgpsmap.py  wigle.py  wpa-sec.py
shikigotchi/ui/: display.py  view.py
shikigotchi/ui/hw/: __init__.py  adafruit2in13.py  base.py  dfrobot1.py  dfrobot_v2.py  displayhatmini.py  dummydisplay.py  inky.py  lcdhat.py  oledhat.py  papirus.py  pirateaudio.py  pitft.py  spotpear24in.py  tftbonnet.py  waveshare13in3k.py  waveshare1in02.py  waveshare1in44lcd.py  waveshare1in54.py  waveshare2in13.py  (+66 more)
(+87 files in other folders)
