[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "shikigotchi"
dynamic = ["version"]
dependencies = [
    "Pillow",
    "PyYAML",
    "RPi.GPIO",
    "dbus-python",
    "file-read-backwards",
    "flask",
    "flask-cors",
    "flask-wtf",
    "gast",
    "gpiozero",
    "gym",
    "inky",
    "pycryptodome",
    "pydrive2",
    "python-dateutil",
    "requests",
    "rpi_hardware_pwm",
    "scapy",
    "shimmy",
    "smbus2",
    "spidev",
    "stable_baselines3",
    "toml",
    "torch",
    "torchvision",
    "tweepy",
    "websockets",
]
requires-python = ">=3.9"
authors = [
  {name = "Anda Toshiki", email = "hello@toshiki.dev"}
]
maintainers = [
  {name = "Anda Toshiki", email = "hello@toshiki.dev"}
]
description = "(⌐■_■) - Deep Reinforcement Learning instrumenting bettercap for WiFI shikiing."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    'Programming Language :: Python :: 3',
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: GNU General Public License (GPL)',
    'Environment :: Console',
]

[project.urls]
Homepage = "https://shikigotchi.toshiki.dev/"
Documentation = "https://shikigotchi.toshiki.dev/"
Repository = "https://git.toshiki.dev/shikigotchi/shikigotchi.git"
Issues = "https://git.toshiki.dev/shikigotchi/shikigotchi/issues"

[project.scripts]
shikigotchi_cli = "bin.shikigotchi:shikigotchi_cli"